src/test/ui/feature-gates/feature-gate-plugin_registrar.stderr
error[E0658]: compiler plugins are experimental and possibly buggy
  --> $DIR/feature-gate-plugin_registrar.rs:6:1
   |
LL | pub fn registrar() {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29597
   = help: add `#![feature(plugin_registrar)]` to the crate attributes to enable

warning: `#[plugin_registrar]` is deprecated and will be removed in 1.44.0
  --> $DIR/feature-gate-plugin_registrar.rs:6:1
   |
LL | pub fn registrar() {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
